<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button1"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="80dp"
        android:text="@string/button1"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="80dp"
        android:text="@string/button3"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar1"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button2"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        android:text="@string/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button5"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        android:text="@string/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="370dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="8dp"
        android:accessibilityLiveRegion="none"
        android:max="1000"
        android:progress="280"
        android:progressDrawable="@drawable/progresspic_1"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2" />

    <ProgressBar
        android:id="@+id/progressBar0"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="230dp"
        android:layout_height="19dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="48dp"
        android:accessibilityLiveRegion="none"
        android:max="1000"
        android:progress="450"
        android:progressDrawable="@drawable/progresspic_0"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="141dp"
        android:layout_height="105dp"
        android:layout_marginStart="-8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/heart_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/progress_heart" />

    <Button
        android:id="@+id/testbutton"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="99dp"
        android:text="@string/testbutton"
        app:layout_constraintBottom_toTopOf="@+id/window"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/window"
        android:layout_width="441dp"
        android:layout_height="152dp"
        android:contentDescription="@string/window"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/textwindow" />

    <ImageView
        android:id="@+id/bar"
        android:layout_width="18dp"
        android:layout_height="31dp"
        android:layout_marginStart="376dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/bar"
        app:layout_constraintBottom_toBottomOf="@+id/window"
        app:layout_constraintEnd_toEndOf="@+id/window"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="@+id/window"
        app:srcCompat="@drawable/bar" />

    <com.kirito.kiritoapplication.CharByCharTextView
        android:id="@+id/text_window_view"
        android:layout_width="346dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="42dp"
        android:alpha="0.7"
        android:text="キリト"
        android:textColor="#FFFFFF"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="@+id/window"

        app:layout_constraintTop_toTopOf="@+id/window"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>